--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ JWT_SECRET=mySuperSecretKey
 DATABASE_URL=mongodb://localhost:27017
 PORT=3001
 HOST="127.0.0.1"
-OPENAI_API_KEY=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
+OPENAI_API_KEY="insert your own key"
